--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
 
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -22,17 +24,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".activity.DomTestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+                <category android:name="android.intent.category.LAUNCHER" />
 
-                <!--<action android:name="com.example.xiamuyao.sumtopnews.activity.MainActivity" />    &lt;!&ndash; 自定义的action&ndash;&gt;-->
+                <action android:name="com.example.xiamuyao.sumtopnews.activity.MainActivity" />    <!-- 自定义的action-->
 
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <category android:name="android.intent.category.DEFAULT" />
 
-            <!--</intent-filter>-->
+            </intent-filter>
         </activity>
 
         <service
@@ -53,18 +55,22 @@
 
         <activity android:name=".activity.XActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
 
-                <action android:name="com.example.xiamuyao.sumtopnews.activity.MainActivity" />    <!-- 自定义的action-->
+                <!--<action android:name="com.example.xiamuyao.sumtopnews.activity.MainActivity" />    &lt;!&ndash; 自定义的action&ndash;&gt;-->
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
 
-            </intent-filter>
+            <!--</intent-filter>-->
 
         </activity>
+
+        <service android:name=".service.TestService"/>
+        <service android:name=".service.MainService"/>
+
 
     </application>
 
